# handball-app-backend

./: .coveragerc  .gitignore  AUTH_TROUBLESHOOTING.md  CLUB_AUTHORIZATION_README.md  FRONTEND_AUTH_README.md  auth_repository.json  event_store.json  pyproject.toml
src/: dependencies.py  in_mem_bus.py  main.py  main_router.py  service_locator.py  settings.py  worker.py
src/application/auth/: models.py  service.py
src/application/club/: commands.py  service.py
src/application/collective/: commands.py  service.py
src/application/player/: commands.py  service.py
src/application/training_session/: commands.py  service.py
src/common/: base_repository.py  constants.py  dtos.py  enums.py  exceptions.py  guid.py  loggers.py  test_utils.py  utils.py
src/common/cqrs/: __init__.py  exceptions.py  in_mem_bus.py  messages.py  testing.py
src/common/eventsourcing/: __init__.py  data.py  encryption.py  event.py  event_stores.py  exceptions.py  messages.py  repositories.py
src/common/interfaces/: __init__.py
src/domains/club/: events.py  model.py  test_club.py
src/domains/collective/: events.py  model.py
src/domains/federation/: events.py  model.py
src/domains/player/: events.py  model.py
src/domains/staff/: events.py  model.py
src/eventsourcing/: encryption.py  event.py  event_stores.py  exceptions.py
src/infrastructure/: session_manager.py  websocket_manager.py
src/read_facades/: club_read_facade.py  db.py  dtos.py  interface.py  pagination.py  public_read_facade.py
src/routers/: auth_router.py  club_router.py
src/tests/: fake_bus.py
(+66 files in other folders)
