[tool.poetry]
name = "handball-app-backend"
version = "0.1.0"
description = ""
authors = ["NourigeonL <louis.nourigeon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.116.1"}
authlib = "^1.6.1"
google-auth-oauthlib = "^1.2.2"
python-jose = "^3.5.0"
multipledispatch = "^1.0.0"
cryptography = "^45.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
